# Endstone-Matchmaking

./: README.md
MatchObiDev/PackMatchmaking/Matchmaking BP/items/: leave_lobby.json
MatchObiDev/PackMatchmaking/Matchmaking RP/textures/: item_texture.json
MatchObiDev/PluginMatchmaking/: LICENSE.txt
MatchObiDev/PluginMatchmaking/src/endstone_matchmaking.egg-info/: entry_points.txt
MatchObiDev/PluginMatchmaking/src/enstone_matchmaking/: plugin.py
PackMatchmaking/Matchmaking BP/: manifest.json
PackMatchmaking/Matchmaking RP/: manifest.json
PackMatchmaking/Matchmaking RP/texts/: en_US.lang
PluginMatchmaking/: pyproject.toml
PluginMatchmaking/src/endstone_matchmaking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
