[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-matchmaking"
version = "0.1.0"
description = "Matchmaking Plugin for Endstone"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ObiDev-Studios" }
]

[project.entry-points."endstone"]
matchmaking = "enstone_matchmaking:Matchmaking"

[tool.hatch.build.targets.wheel]
packages = ["src/enstone_matchmaking"]